# work-order-assistant

./: .env.example  .gitignore  DESIGN.md  README.md  langgraph.json  pyproject.toml
.claude/: settings.local.json
docs/: DML优化总结.md  DML多步骤查询指南.md  LangChain_1.0_升级分析报告.md  完成报告.md
prompts/base/: context_analysis.txt  entity_extraction.txt
prompts/mutation/: general_mutation.txt
prompts/query/: general_query.txt
resources/configs/mutation_steps/: cancel_clean_info.json  cancel_marine_order.json  query_equipment.json  rollback_delivery_order.json  schema.json  update_telco_customer.json
resources/prompts/base/: intent_recognition.txt
resources/prompts/query/: sql_generation.txt
src/work_order_assistant/: __init__.py  agent.py  config.py  main.py
src/work_order_assistant/api/: __init__.py
src/work_order_assistant/api/routes/: __init__.py  work_order.py
src/work_order_assistant/api/schemas/: __init__.py  request.py  response.py
src/work_order_assistant/models/: __init__.py  operation.py  work_order.py
src/work_order_assistant/services/: __init__.py  email_service.py  llm_service.py  mcp_service.py  mutation_steps_service.py  oss_service.py  prompt_service.py
src/work_order_assistant/tools/: __init__.py  sql_tool.py
src/work_order_assistant/utils/: __init__.py  condition_evaluator.py  excel_generator.py  logger.py
src/work_order_assistant/workflows/: __init__.py  state.py  work_order_workflow.py
src/work_order_assistant/workflows/nodes/: __init__.py  entity_extraction.py  generate_dml.py  intent_recognition.py  mcp_query.py  multi_step_query.py  send_dml_email.py  send_query_email.py  sql_query.py
