[project]
name = "work-order-assistant"
version = "1.0.0"
description = "智能工单处理助手系统 - 基于 LangGraph 的异步邮件通知系统"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    # FastAPI 核心
    "fastapi>=0.119.1",
    "uvicorn[standard]>=0.38.0",
    "pydantic[email]>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",

    # LangChain 生态 - 已升级到 1.0
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langchain-anthropic>=1.0,<2.0",
    "langgraph>=1.0,<2.0",

    # HTTP 客户端
    "httpx>=0.28.1",

    # 阿里云 OSS
    "oss2>=2.19.0",

    # 邮件发送
    "aiosmtplib>=5.0.0",

    # Excel 处理
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",

    # 工具库
    "python-dotenv>=1.2.1",

    # 数据库
    "mysql-connector-python>=9.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "ruff>=0.14.2",
    "mypy>=1.18.2",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
work_order_assistant = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
